# rag_service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.e2e.yml  docker-compose.local-auth.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260411_0001_initial_schema.py  20260419_0002_add_chat_message_clerk_user_id.py  20260420_0003_add_chat_sessions.py  20260422_0004_singleton_workspace_and_ingestion_index.py  20260430_0005_add_job_scheduled_at.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py  schemas.py
backend/app/api/routes/: chat.py  documents.py  health.py  workspace.py
backend/app/db/: constants.py  models.py  session.py  types.py
backend/app/services/: auth.py  chat.py  chat_repository.py  chunking.py  document_repository.py  e2e.py  ingestion.py  job_backoff.py  llm.py  observability.py  parsers.py  retrieval.py  storage.py  workspace.py
backend/app/worker/: main.py
backend/tests/: conftest.py  test_async_io_services.py  test_chat_session_models.py  test_config.py
backend/tests/api/: auth_helpers.py  test_auth_dependency.py  test_chat.py  test_documents.py  test_e2e_mode.py  test_health.py  test_workspace.py
backend/tests/evals/: test_rag_quality.py
backend/tests/worker/: test_ingestion.py
docs/: demo-script.md  deployment.md  local-development.md  testing.md  troubleshooting.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+28 files in other folders)
